k8s-node/prisma-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s-node
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: prisma
  name: prisma
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: prisma
    spec:
      containers:
        - env:
            - name: PRISMA_CONFIG
              value: |
                port: 4466
                # uncomment the next line and provide the env var PRISMA_MANAGEMENT_API_SECRET=my-secret to activate cluster security
                # managementApiSecret: my-secret
                databases:
                  default:
                    connector: postgres
                    host: postgres
                    user: prisma
                    password: prisma
                    rawAccess: false
                    port: 5432
                    migrations: true
          image: prismagraphql/prisma:1.34
          name: prisma
          ports:
            - containerPort: 4466
          resources: {}
      restartPolicy: Always
status: {}
