k8s-node/prisma-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s-node
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: prisma
  name: prisma
spec:
  type: NodePort
  ports:
    - name: "4466"
      port: 4466
      targetPort: 4466
  selector:
    io.kompose.service: prisma
status:
  loadBalancer: {}
