k8s-node/timeline-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s-node
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: timeline
  name: timeline
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 4000
  selector:
    io.kompose.service: timeline
status:
  loadBalancer: {}
